--- a/views/edit.pug
+++ b/views/edit.pug
@@ -4,4 +4,11 @@ block content
   h1= title
   form(action="/edit/doEdit", method="get")
     input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
+    input(type="text", name="text")
     input(type="submit", value="提交")
