--- a/views/indexArticlesInsert.pug
+++ b/views/indexArticlesInsert.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  form(action="/edit/doEdit", method="post")
+  form(action="/edit/indexArticlesInsert", method="post", enctype="multipart/form-data")
     p Number
     input(type="number", name="number")
     br
@@ -18,4 +18,4 @@ block content
     p Cover
     input(type="file", name="cover")
     br
-    input(type="submit", name="submit")
+    input(type="submit")
