--- a/views/indexArticles.pug
+++ b/views/indexArticles.pug
@@ -1,4 +1,24 @@
 extends layout
 
 block content
-  p= data
+  h1= title
+  table
+    tr
+      th Date
+      th Num
+      th Title
+      th Desc
+      th Abstract
+      th CoverLink
+      th Tags
+    each val in data
+      tr
+        td= val.date
+        td= val.num
+        td= val.title
+        td= val.desc
+        td= val.abstract
+        td
+          a(href=val.coverLink)
+            66
+        td= val.tags
