--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,3 +27,19 @@ p {
 input:focus {
   border: 1px solid rgb(0, 106, 249);
 }
+
+table {
+  border-collapse: collapse;
+  text-align: left;
+}
+
+th{
+  border-bottom: 1px solid#001b51;
+}
+
+tr,th,td{
+  height: 48px;
+  padding-right: 20px;
+  max-width: 200px;
+  min-width: 60px;
+}
