--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,30 @@ input {
   font-family: 'Microsoft soft';
 }
 
+table input {
+  box-sizing: border-box;
+  outline-style: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+  padding: 6px 12px;
+  margin: 5px 0;
+  font-size: 14px;
+  font-family: 'Microsoft soft';
+}
+
+table span {
+  display: inline-block;
+  width: 34%;
+  margin: 4px 8px;
+}
+
+table span input {
+  width: 20px;
+  padding: 0;
+  margin: 0;
+}
+
 p {
   margin: 16px 8px 0 0;
 }
@@ -33,11 +57,13 @@ table {
   text-align: left;
 }
 
-th{
+th {
   border-bottom: 1px solid#001b51;
 }
 
-tr,th,td{
+tr,
+th,
+td {
   height: 48px;
   padding-right: 20px;
   max-width: 200px;
