--- a/views/fsupload.pug
+++ b/views/fsupload.pug
@@ -2,14 +2,8 @@ extends layout
 
 block content
   h1= title
-  form(action="http://localhost:3000/test/fsupload", method="post" ,enctype="multipart/form-data")
+  form(action="/test/fsupload", method="post" ,enctype="multipart/form-data")
     input(type="file", name="file", id="file" multiple="multiple")
-    input(type="text", name="text", id="text")
+    input(type="text", name="filepath", id="filepath")
+    input(type="text", name="extname", id="extname")
     input(type="submit", value="提交")
-
-
-
-//- <form action="http://localhost:8080/api/upload" method="post" enctype="multipart/form-data">
-//-     <input type="file" name="file" id="file" value="" multiple="multiple" />
-//-     <input type="submit" value="提交"/>
-//- </form>
