--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/server/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
