--- a/views/indexArticles.pug
+++ b/views/indexArticles.pug
@@ -34,11 +34,14 @@ block content
         td
           input(type="num", name="num")
         td
-          input(type="text", name="title")
+          textarea(name="title", cols="20", rows="3")
+          //- input(type="textarea", name="title" rows="3")
         td
-          input(type="text", name="description")
+          textarea(name="description", cols="20", rows="3")
+          //- input(type="textarea", name="description" rows="3")
         td
-          input(type="text", name="abstract")
+          textarea(name="abstract", cols="20", rows="3")
+          //- input(type="textarea", name="abstract" rows="3")
         td
           input(type="file", name="cover")
         td
